--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -8,18 +8,19 @@ on:
     branches:
       - "*"
 
-matrix:
-  platform: ['x86_64', 'aarch64']
-  include:
-    - arch: "AMD64"
-      platform: "x86_64"
-    - arch: "ARM64"
-      platform: "aarch64"
-
 jobs:
   build:
     name: build ((${{ matrix.platform}})
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: ['x86_64', 'aarch64']
+        include:
+          - arch: "AMD64"
+            platform: "x86_64"
+          - arch: "ARM64"
+            platform: "aarch64"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
