--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -11,7 +11,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  MANYLINUX_VERSION: "2_28"
+  MANYLINUX_VERSION: "2014"
 
 jobs:
   build:
