--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - name: Prepare
         run: |
-          platform=${{ matrix.dcoker_platform }}
+          platform=${{ matrix.platform.docker_platform }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v3
